# agenttrace

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
sessionlog/: __main__.py  config.py  db.py  ingest.py  watcher.py
tests/: test_db.py  test_ingest.py  test_ingest_integration.py  test_sources.py
views/mission-control/: package.json
views/mission-control/src/: index.ts
views/pipeline/: package.json  tsconfig.json
views/pipeline/src/: index.ts
views/pixel-office/: package.json
views/pixel-office/src/: index.ts
views/process-monitor/: package.json
views/process-monitor/src/: index.ts
