[project]
name = "sessionlog"
version = "0.1.5"
description = "Real-time ingestion daemon for AI coding agent sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0",
    "click>=8.0",
]

[project.scripts]
sessionlog = "sessionlog.__main__:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
